update swagger + logout
