# ApiGateway/docs/swagger.yaml
@@ -1,9 +1,99 @@
 basePath: /
 definitions:
+  proto.AddMediaResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  proto.Album:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  proto.CreateAlbumRequest:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  proto.CreateAlbumResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  proto.CreateUserRequest:
+    properties:
+      email:
+        type: string
+      username:
+        type: string
+    type: object
+  proto.CreateUserResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  proto.DeleteAlbumResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  proto.DeleteMediaResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  proto.DetectSimilarMediaRequest:
+    properties:
+      media_id:
+        type: integer
+    type: object
+  proto.DetectSimilarMediaResponse:
+    properties:
+      media:
+        items:
+          $ref: '#/definitions/proto.Media'
+        type: array
+    type: object
   proto.ForgotPasswordRequest:
     properties:
       email:
         type: string
+    type: object
+  proto.GetAlbumsByUserResponse:
+    properties:
+      albums:
+        items:
+          $ref: '#/definitions/proto.Album'
+        type: array
+    type: object
+  proto.GetMediaByUserResponse:
+    properties:
+      media_list:
+        items:
+          $ref: '#/definitions/proto.Media'
+        type: array
+    type: object
+  proto.GetPrivateAlbumResponse:
+    properties:
+      album:
+        $ref: '#/definitions/proto.Album'
+    type: object
+  proto.GetPrivateMediaResponse:
+    properties:
+      media:
+        items:
+          $ref: '#/definitions/proto.Media'
+        type: array
     type: object
   proto.GoogleAuthCallbackRequest:
     properties:
@@ -20,6 +110,29 @@ definitions:
   proto.LogoutRequest:
     properties:
       token:
+        type: string
+    type: object
+  proto.MarkAsPrivateRequest:
+    properties:
+      media_id:
+        type: integer
+      pin:
+        type: string
+    type: object
+  proto.MarkAsPrivateResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  proto.Media:
+    properties:
+      album_id:
+        type: integer
+      file_size:
+        type: integer
+      id:
+        type: integer
+      name:
         type: string
     type: object
   proto.RegisterRequest:
@@ -44,6 +157,40 @@ definitions:
       token:
         type: string
     type: object
+  proto.UpdateAlbumRequest:
+    properties:
+      album_id:
+        type: integer
+      description:
+        type: string
+      name:
+        type: string
+    type: object
+  proto.UpdateAlbumResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  proto.UpdateUserRequest:
+    properties:
+      email:
+        type: string
+      firstName:
+        type: string
+      lastName:
+        type: string
+      picture:
+        type: string
+      token:
+        type: string
+      username:
+        type: string
+    type: object
+  proto.UpdateUserResponse:
+    properties:
+      message:
+        type: string
+    type: object
 host: localhost:8081
 info:
   contact:
@@ -53,6 +200,151 @@ info:
   title: Bing Photo API Gateway
   version: "1.0"
 paths:
+  /albums:
+    post:
+      consumes:
+      - application/json
+      description: Crée un nouvel album avec un titre et un identifiant utilisateur
+      parameters:
+      - description: Données de l'album
+        in: body
+        name: album
+        required: true
+        schema:
+          $ref: '#/definitions/proto.CreateAlbumRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/proto.CreateAlbumResponse'
+        "400":
+          description: Requête invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Créer un album
+      tags:
+      - Albums
+  /albums/{id}:
+    delete:
+      description: Supprime un album existant par son ID
+      parameters:
+      - description: ID de l'album
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.DeleteAlbumResponse'
+        "400":
+          description: ID invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Supprimer un album
+      tags:
+      - Albums
+    put:
+      consumes:
+      - application/json
+      description: Met à jour les informations d'un album
+      parameters:
+      - description: ID de l'album
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Mise à jour de l'album
+        in: body
+        name: album
+        required: true
+        schema:
+          $ref: '#/definitions/proto.UpdateAlbumRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.UpdateAlbumResponse'
+        "400":
+          description: Requête invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Mettre à jour un album
+      tags:
+      - Albums
+  /albums/private:
+    get:
+      description: Récupère un album privé à partir de son ID
+      parameters:
+      - description: ID de l'album
+        in: query
+        name: album_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.GetPrivateAlbumResponse'
+        "400":
+          description: ID invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Obtenir un album privé
+      tags:
+      - Albums
+  /albums/user:
+    get:
+      description: Récupère tous les albums appartenant à un utilisateur donné
+      parameters:
+      - description: ID utilisateur
+        in: query
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.GetAlbumsByUserResponse'
+        "400":
+          description: ID utilisateur invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Obtenir les albums d'un utilisateur
+      tags:
+      - Albums
   /auth/forgot-password:
     post:
       consumes:
@@ -193,6 +485,8 @@ paths:
           description: Logout failed
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Logout
       tags:
       - Auth
@@ -260,8 +554,8 @@ paths:
       summary: Reset Password
       tags:
       - Auth
-  /auth/validate:
-    get:
+  /auth/validateToken:
+    post:
       description: Validates a JWT token
       parameters:
       - description: Bearer <token>
@@ -287,4 +581,275 @@ paths:
       summary: Validate Token
       tags:
       - Auth
+  /media:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Ajoute un fichier média à un album
+      parameters:
+      - description: ID de l'album
+        in: formData
+        name: album_id
+        required: true
+        type: integer
+      - description: Fichier à uploader
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/proto.AddMediaResponse'
+        "400":
+          description: Erreur de parsing du formulaire
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Ajouter un média
+      tags:
+      - Media
+  /media/{id}:
+    delete:
+      description: Supprime un média par son ID
+      parameters:
+      - description: ID du média
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.DeleteMediaResponse'
+        "400":
+          description: ID invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Supprimer un média
+      tags:
+      - Media
+  /media/{id}/download:
+    get:
+      description: Télécharge le contenu d’un fichier média
+      parameters:
+      - description: ID du média
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/octet-stream
+      responses:
+        "200":
+          description: Fichier binaire
+          schema:
+            type: file
+        "400":
+          description: ID invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Télécharger un média
+      tags:
+      - Media
+  /media/{id}/private:
+    post:
+      consumes:
+      - application/json
+      description: Marque un média comme privé
+      parameters:
+      - description: Données de la requête
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/proto.MarkAsPrivateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.MarkAsPrivateResponse'
+        "400":
+          description: Requête invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Rendre un média privé
+      tags:
+      - Media
+  /media/private:
+    get:
+      description: Récupère les médias privés d’un utilisateur
+      parameters:
+      - description: ID utilisateur
+        in: query
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.GetPrivateMediaResponse'
+        "400":
+          description: ID invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Obtenir les médias privés
+      tags:
+      - Media
+  /media/similar:
+    post:
+      consumes:
+      - application/json
+      description: Détecte les fichiers médias similaires à celui donné
+      parameters:
+      - description: Requête de détection
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/proto.DetectSimilarMediaRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.DetectSimilarMediaResponse'
+        "400":
+          description: Requête invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Détecter les médias similaires
+      tags:
+      - Media
+  /media/user:
+    get:
+      description: Récupère tous les médias appartenant à un utilisateur
+      parameters:
+      - description: ID utilisateur
+        in: query
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.GetMediaByUserResponse'
+        "400":
+          description: ID invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Médias d’un utilisateur
+      tags:
+      - Media
+  /update-user:
+    put:
+      consumes:
+      - application/json
+      description: Met à jour les informations d'un utilisateur (nom, prénom, email,
+        photo)
+      parameters:
+      - description: Champs à mettre à jour
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/proto.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.UpdateUserResponse'
+        "400":
+          description: Requête invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur interne du serveur
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Mettre à jour un utilisateur
+      tags:
+      - Auth
+  /users:
+    post:
+      consumes:
+      - application/json
+      description: Crée un nouvel utilisateur avec les informations fournies
+      parameters:
+      - description: Données de l'utilisateur
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/proto.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/proto.CreateUserResponse'
+        "400":
+          description: Requête invalide
+          schema:
+            type: string
+        "500":
+          description: Erreur serveur
+          schema:
+            type: string
+      summary: Créer un utilisateur
+      tags:
+      - Utilisateurs
+securityDefinitions:
+  BearerAuth:
+    description: 'Format : Bearer <votre_token>'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
